--- a/baseline_3.ipynb
+++ b/baseline_3.ipynb
@@ -1,9 +1,6 @@
-import json, os, shutil, random
-import torch
-import torch.nn as nn
-import torch.optim as optim
-from torch.utils.data import DataLoader
-from torchvision import transforms, datasets, models
-import matplotlib.pyplot as plt
-import sklearn.metrics as metrics
-from PIL import Image
+{
+  "cells": [],
+  "metadata": {},
+  "nbformat": 4,
+  "nbformat_minor": 2
+}
